include/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: CHANGEME
  labels:
    app: CHANGEME
