include/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: CHANGEME
  name: CHANGEME
  namespace: CHANGEME
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: CHANGEME
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
